--- a/repositorio.html
+++ b/repositorio.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +13,7 @@
 </head>
 <body>
     
-    <h1>Mi Repo de Prácticas CSAAI 2025</h1>
+    <h1>Mi Repositorio de Prácticas CSAAI 2025</h1>
 
     <div class="fila">
       <div id="c1" class="columna izquierda">
@@ -76,4 +75,3 @@
 
 </body>
 </html>
-
