--- a/repositorio.html
+++ b/repositorio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     
-    <h1>Mi Repositorio de Prácticas CSAAI 2025</h1>
+    <h1>Prácticas CSAAI 2025</h1>
 
     <div class="fila">
       <div id="c1" class="columna izquierda">
