--- a/index.html
+++ b/index.html
@@ -5,72 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prácticas CSAAI 2025</title>
-
-   <!-- Hoja de estilo -->
-   <link rel="stylesheet" href="2c-template.css">    
-   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
+    
+    <!-- Hoja de estilo -->
+    <link rel="stylesheet" href="2c-template.css">    
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     
     <h1>Prácticas CSAAI 2025</h1>
 
     <div class="fila">
-      <div id="c1" class="columna izquierda">
-        <h2>Índice de Prácticas</h2>
-        <h2>Jaime Bao</h2>
+        <div id="c1" class="columna izquierda">
+            <h2>Índice de Prácticas</h2>
+            <h3>Jaime Bao</h3>
 
-        <div class="iresponsive">
-            <img id="imghtml" src="html5.png" alt="html5" width="200" height="200">
+            <div class="iresponsive">
+                <img id="imghtml" src="html5.png" alt="HTML5">
+            </div>
+
+            <div class="iresponsive">
+                <img id="imgcss" src="css.png" alt="CSS">
+            </div>
+
+            <p>
+                Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
+                Sed ad nostro delicatissimi, postea pertinax est an.
+            </p>
+
+            <ul>
+                <li><a href="#practica_1">Práctica 1: CV</a></li>
+                <li>Formación</li>
+                <li>Experiencia</li>
+                <li>Acerca de</li>
+            </ul>
         </div>
 
-        <div class="iresponsive">
-            <img id="imgcss" src="css.png" alt="css" width="200" height="200">
-        </div>
+        <div id="c2" class="columna derecha">
+            <h2 id="practica_1">Práctica 1: CV</h2>
+            <img src="web-tech.png" alt="Tecnologías web">
+            <p>Mel id clita mollis repudiare. Sed ad nostro delicatissimi.</p>
 
-        <p>Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
-            Sed ad nostro delicatissimi, postea pertinax est an. Adhuc sensibus percipitur sed te, 
-            eirmod tritani debitis nec ea. Cu vis quis gubergren.
-        </p>
-        <ul>
-            <li><a href="#practica_1">Práctica 1: CV</a></li>
-            <li>Formación</li>
-            <li>Experiencia</li>
-            <li>Acerca de</li>
-        </ul>
-      </div>
-      <div id="c2" class="columna derecha">
-        <h2 id="practica_1">Práctica 1: CV</h2>
-        <img src="web-tech.png" alt="Tecnologías web">
-        <p>Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
-            Sed ad nostro delicatissimi, postea pertinax est an. Adhuc sensibus percipitur sed te, 
-            eirmod tritani debitis nec ea. Cu vis quis gubergren.
-        </p>
-        <h2>Práctica 2: ?</h2>
-        <img src="web-tech.png" alt="Tecnologías web">
-        <p>Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
-            Sed ad nostro delicatissimi, postea pertinax est an. Adhuc sensibus percipitur sed te, 
-            eirmod tritani debitis nec ea. Cu vis quis gubergren.
-        </p>        
-        <h2>Práctica 3: ?</h2>
-        <img src="web-tech.png" alt="Tecnologías web">
-        <p>Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
-            Sed ad nostro delicatissimi, postea pertinax est an. Adhuc sensibus percipitur sed te, 
-            eirmod tritani debitis nec ea. Cu vis quis gubergren.
-        </p>        
-        <h2>Práctica 4: ?</h2>
-        <img src="web-tech.png" alt="Tecnologías web">
-        <p>Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
-            Sed ad nostro delicatissimi, postea pertinax est an. Adhuc sensibus percipitur sed te, 
-            eirmod tritani debitis nec ea. Cu vis quis gubergren.
-        </p>        
-        <h2>Práctica 5: ?</h2>
-        <img src="web-tech.png" alt="Tecnologías web">
-        <p>Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
-            Sed ad nostro delicatissimi, postea pertinax est an. Adhuc sensibus percipitur sed te, 
-            eirmod tritani debitis nec ea. Cu vis quis gubergren.
-        </p>                                
-      </div>
+            <h2>Práctica 2: Diseño Web</h2>
+            <img src="web-tech.png" alt="Tecnologías web">
+            <p>Postea pertinax est an. Adhuc sensibus percipitur sed te.</p>
+
+            <h2>Práctica 3: JavaScript</h2>
+            <img src="web-tech.png" alt="Tecnologías web">
+            <p>Cu vis quis gubergren. Eirmod tritani debitis nec ea.</p>
+
+            <h2>Práctica 4: Responsive Design</h2>
+            <img src="web-tech.png" alt="Tecnologías web">
+            <p>Adhuc sensibus percipitur sed te, eirmod tritani debitis nec ea.</p>
+
+            <h2>Práctica 5: Proyecto Final</h2>
+            <img src="web-tech.png" alt="Tecnologías web">
+            <p>Cu vis quis gubergren. Ad nostro delicatissimi, postea pertinax est an.</p>
+        </div>
     </div>
 
 </body>
