--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </p>
 
             <ul>
-                <li><a href="P1/index.html">Práctica 1: CV</a></li>
+                <li><a href="P1">Práctica 1: CV</a></li>
                 <li>Formación</li>
                 <li>Experiencia</li>
                 <li>Acerca de</li>
