--- a/P1/index.html
+++ b/P1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="hojaestiloCV.css">
-  <title>Currículum Mike Wazowski</title>
+  <title>CV Mike Wazowski</title>
 </head>
 
 <body>
@@ -36,8 +36,8 @@
         </div>
         <div class="parrafos">
           <p><img src="telefono.png" alt="Teléfono" width=20px> +123 456 789 <br>
-          <img src="email.png" alt="Correo" width=20px> mike@monstersinc.com <br>
-          <img src="linkedin.png" alt="LinkedIn" width=20px>
+          <img src="correo.png" alt="Correo" width=20px> mike@monstersinc.com <br>
+          <img src="linkedn.png" alt="LinkedIn" width=20px>
           <a href="#">MikeWazowski.LinkedIn</a></p>
         </div>
         
@@ -106,8 +106,7 @@
     
     <!-- Pie de página -->
     <footer>
-      <img src="monsters_logo.png" width="300px">
-      <img src="mike_dance.gif" width="90px">
+      <img src="monster_inc.jpg" width="300px">
     </footer>
 </body>
 </html>
