--- a/P1/index.html
+++ b/P1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículum de Mike Wazowski</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="hojaestiloCV.css">
 </head>
 <body>
     <div class="container">
@@ -23,9 +23,9 @@
                 <section>
                     <h2>Contacto</h2>
                     <ul>
-                        <li><img src="telefono.png" alt="Teléfono"> +1 234 567 890</li>
-                        <li><img src="gmail.png" alt="Correo"> mike@monstersinc.com</li>
-                        <li><img src="linkedn.png" alt="LinkedIn"> <a href="#">MikeW_LinkedIn</a></li>
+                        <li><img src="telefono.png" width=20px alt="Teléfono"> +1 234 567 890</li>
+                        <li><img src="gmail.png" width=20px alt="Correo"> mike@monstersinc.com</li>
+                        <li><img src="linkedn.png" width=20px alt="LinkedIn"> <a href="#">MikeW_LinkedIn</a></li>
                     </ul>
                 </section>
                 <section>
