--- a/P1/index.html
+++ b/P1/index.html
@@ -4,78 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículum de Mike Wazowski</title>
-    <link rel="stylesheet" href="hojaestiloCV.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="contenedor">
         <header>
             <h1>MIKE WAZOWSKI</h1>
         </header>
-        <div class="main-content">
-            <aside class="sidebar">
-                <div class="profile-pic">
-                    <img src="mike.png" alt="Mike Wazowski">
-                </div>
-                <section>
-                    <h2>Sobre mí</h2>
-                    <p>¡Hola! Soy Mike Wazowski, asustador profesional y experto en energía del grito. Trabajo en Monsters, Inc. junto a mi mejor amigo Sulley.</p>
-                </section>
-                <section>
-                    <h2>Contacto</h2>
-                    <ul>
-                        <li><img src="telefono.png" width=20px alt="Teléfono"> +1 234 567 890</li>
-                        <li><img src="gmail.png" width=20px alt="Correo"> mike@monstersinc.com</li>
-                        <li><img src="linkedn.png" width=20px alt="LinkedIn"> <a href="#">MikeW_LinkedIn</a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h2>Citas célebres</h2>
-                    <ul>
-                        <li>"¡Siempre serás el número uno para mí, Sulley!"</li>
-                        <li>"¡Ponme un micrófono!"</li>
-                        <li>"No es tanto el rugido, sino el corazón del asustador."</li>
-                    </ul>
-                </section>
+        <div class="cuerpo">
+            <aside class="lateral">
+                <img src="mike.png" alt="Mike Wazowski" class="foto">
+                <h2>Sobre mí</h2>
+                <p>Monstruo profesional en sustos, estudiante destacado en Monsters University y trabajador en Monsters Inc.</p>
+                <h2>Contacto</h2>
+                <ul>
+                    <li>📅 25 de octubre</li>
+                    <li>📍 Monstruópolis</li>
+                    <li>✉️ mike@monstersinc.com</li>
+                </ul>
+                <h2>Citas célebres</h2>
+                <ul>
+                    <li>"Siempre damos lo mejor de nosotros, Sullivan."</li>
+                    <li>"¡Soy imparable!"</li>
+                </ul>
             </aside>
-            <main class="content">
+            <main>
                 <section>
                     <h2>Estudios</h2>
                     <ul>
-                        <li>Licenciatura en Sustos - Monsters University</li>
-                        <li>Curso intensivo de Energía del grito</li>
+                        <li>Monsters University - Sustología</li>
                     </ul>
                 </section>
                 <section>
                     <h2>Experiencia profesional</h2>
                     <ul>
-                        <li>Asistente en Monsters, Inc.</li>
-                        <li>Comediante y experto en risas</li>
-                        <li>Co-fundador del programa de energía de la risa</li>
+                        <li>Asistente de Sustos - Monsters Inc.</li>
+                        <li>Entrenador de Sustos - Monsters University</li>
                     </ul>
                 </section>
                 <section>
                     <h2>Idiomas</h2>
                     <ul>
-                        <li>Monstruoso: Nativo</li>
-                        <li>Humano: Intermedio</li>
+                        <li>Monstruoso - Nativo</li>
+                        <li>Humano - Básico</li>
                     </ul>
                 </section>
                 <section>
                     <h2>Otros datos de interés</h2>
                     <ul>
-                        <li>Ganador del trofeo al "Empleado del mes" en Monsters, Inc.</li>
-                        <li>Experto en técnicas de persuasión</li>
+                        <li>Experto en puertas de acceso</li>
+                        <li>Campeón de carreras en pasillos</li>
                     </ul>
                 </section>
                 <section>
                     <h2>Referencias</h2>
-                    <p>James P. Sullivan - Monsters, Inc.<br>Randall Boggs - Excompañero de clase</p>
+                    <p>James P. Sullivan - CEO de Monsters Inc.</p>
                 </section>
             </main>
         </div>
-        <footer>
-            <img src="monster_inc.jpg" alt="Monsters, Inc.">
-        </footer>
     </div>
 </body>
 </html>
