--- a/P1/index.html
+++ b/P1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Dos columnas</title>
+    <title>CV Mike Wazowski</title>
 
    <!-- Hoja de estilo -->
    <link rel="stylesheet" href="cv.css">    
@@ -12,11 +12,11 @@
 </head>
 <body>
     
-    <h2>Diseño de plantilla a dos columnas</h2>
+    <h2>MIKE WAZOWSKI</h2>
 
     <div class="fila">
       <div id="c1" class="columna izquierda">
-        <h2>Columna Izquierda</h2>
+        <h2>Sobre mí</h2>
 
         <div class="iresponsive">
             <img id="imghtml" src="html5.png" alt="html5" width="200" height="200">
@@ -26,12 +26,17 @@
             <img id="imgcss" src="css.png" alt="css" width="200" height="200">
         </div>
 
-        <p>Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
-            Sed ad nostro delicatissimi, postea pertinax est an. Adhuc sensibus percipitur sed te, 
-            eirmod tritani debitis nec ea. Cu vis quis gubergren.
+        <p>¡Hola! Soy Mike Wazowski, asustador profesional y experto en energía del grito.
+            Trabajo en Monsters, Inc. junto a mi mejor amigo Sulley Sullivan.
         </p>
         <ul>
             <li>Contacto</li>
+            <div class="iresponsive">
+                <img id="direccion" src="direccion.png" alt="direccion" width="20px" height="20px">
+            </div>    
+            <div class="iresponsive">
+                <img id="gmail" src="gmail.png" alt="gmail" width="20px" height="20px">
+            </div>
             <li>Formación</li>
             <li>Experiencia</li>
             <li>Acerca de</li>
