--- a/P1/index.html
+++ b/P1/index.html
@@ -1,55 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Mike Wazowski</title>
-
-   <!-- Hoja de estilo -->
-   <link rel="stylesheet" href="cv.css">    
-
+    <!-- Hoja de estilo -->
+    <link rel="stylesheet" href="cv.css">    
 </head>
 <body>
     
-    <h2>MIKE WAZOWSKI</h2>
+    <h1>MIKE WAZOWSKI</h1>
+    <h3>Asustador Profesional</h3>
 
     <div class="fila">
-      <div id="c1" class="columna izquierda">
-        <h2>Sobre mí</h2>
+        <!-- Columna Izquierda -->
+        <div id="c1" class="columna izquierda">
+            <h2>Sobre mí</h2>
 
-        <div class="iresponsive">
-            <img id="imghtml" src="html5.png" alt="html5" width="200" height="200">
-        </div>
-
-        <div class="iresponsive">
-            <img id="imgcss" src="css.png" alt="css" width="200" height="200">
-        </div>
-
-        <p>¡Hola! Soy Mike Wazowski, asustador profesional y experto en energía del grito.
-            Trabajo en Monsters, Inc. junto a mi mejor amigo Sulley Sullivan.
-        </p>
-        <ul>
-            <li>Contacto</li>
+            <!-- Imágenes de Mike -->
             <div class="iresponsive">
-                <img id="direccion" src="direccion.png" alt="direccion" width="20px" height="20px">
-            </div>    
-            <div class="iresponsive">
-                <img id="gmail" src="gmail.png" alt="gmail" width="20px" height="20px">
+                <img id="mike1" src="mike1.jpg" alt="Mike Wazowski" width="200" height="200">
             </div>
-            <li>Formación</li>
-            <li>Experiencia</li>
-            <li>Acerca de</li>
-        </ul>
-      </div>
-      <div id="c2" class="columna derecha">
-        <h2>Columna Derecha</h2>
-        <img src="web-tech.png" alt="Tecnologías web">
-        <p>Senserit mediocrem vis ex, et dicunt deleniti gubergren mei. Mel id clita mollis repudiare. 
-            Sed ad nostro delicatissimi, postea pertinax est an. Adhuc sensibus percipitur sed te, 
-            eirmod tritani debitis nec ea. Cu vis quis gubergren.
-        </p>
-      </div>
+            <div class="iresponsive">
+                <img id="mike2" src="mike2.jpg" alt="Mike Wazowski" width="200" height="200">
+            </div>
+
+            <p>
+                ¡Hola! Soy Mike Wazowski, asustador profesional y experto en energía del grito. 
+                Trabajo en Monsters, Inc. junto a mi mejor amigo Sulley Sullivan. 
+                Me especializo en generar gritos de alta calidad y en entrenar a nuevos asustadores.
+            </p>
+
+            <h2>Contacto</h2>
+            <ul>
+                <li>
+                    <img id="direccion" src="direccion.png" alt="Dirección" width="20" height="20">
+                    Calle Monstruosa 123, Monstropolis
+                </li>
+                <li>
+                    <img id="gmail" src="gmail.png" alt="Email" width="20" height="20">
+                    mikewazowski@monstersinc.com
+                </li>
+                <li>
+                    <img id="telefono" src="telefono.png" alt="Teléfono" width="20" height="20">
+                    +1 555-SCARES
+                </li>
+            </ul>
+        </div>
+
+        <!-- Columna Derecha -->
+        <div id="c2" class="columna derecha">
+            <h2>Experiencia Laboral</h2>
+            <h4>Asustador Senior - Monsters, Inc.</h4>
+            <p><em>2001 - Presente</em></p>
+            <ul>
+                <li>Generación de gritos de nivel A+.</li>
+                <li>Colaboración con Sulley Sullivan para maximizar la producción de energía.</li>
+                <li>Entrenamiento de nuevos asustadores.</li>
+            </ul>
+
+            <h4>Asustador Junior - Monsters, Inc.</h4>
+            <p><em>1995 - 2001</em></p>
+            <ul>
+                <li>Aprendizaje de técnicas de asustamiento.</li>
+                <li>Participación en simulacros de sustos.</li>
+            </ul>
+
+            <h2>Educación</h2>
+            <h4>Licenciatura en Asustamiento - Universidad de Monstropolis</h4>
+            <p><em>1991 - 1995</em></p>
+            <ul>
+                <li>Especialización en técnicas avanzadas de susto.</li>
+                <li>Curso de seguridad en puertas dimensionales.</li>
+            </ul>
+
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Técnicas avanzadas de asustamiento.</li>
+                <li>Trabajo en equipo y liderazgo.</li>
+                <li>Manejo de software de seguimiento de gritos.</li>
+            </ul>
+        </div>
     </div>
 
 </body>
