--- a/P1/index.html
+++ b/P1/index.html
@@ -2,14 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Mike Wazowski</title>
-    <!-- Hoja de estilo -->
-    <link rel="stylesheet" href="cv.css">    
+    <link rel="stylesheet" href="cv.css">
 </head>
 <body>
-    
     <h1>MIKE WAZOWSKI</h1>
     <h3>Asustador Profesional</h3>
 
@@ -17,36 +14,16 @@
         <!-- Columna Izquierda -->
         <div id="c1" class="columna izquierda">
             <h2>Sobre mí</h2>
-
-            <!-- Imágenes de Mike -->
             <div class="iresponsive">
-                <img id="mike1" src="mike1.jpg" alt="Mike Wazowski" width="200" height="200">
+                <img src="mike1.jpg" alt="Mike Wazowski">
             </div>
             <div class="iresponsive">
-                <img id="mike2" src="mike2.jpg" alt="Mike Wazowski" width="200" height="200">
+                <img src="mike2.jpg" alt="Mike Wazowski">
             </div>
-
             <p>
-                ¡Hola! Soy Mike Wazowski, asustador profesional y experto en energía del grito. 
-                Trabajo en Monsters, Inc. junto a mi mejor amigo Sulley Sullivan. 
+                ¡Hola! Soy Mike Wazowski, asustador profesional en Monsters, Inc. 
                 Me especializo en generar gritos de alta calidad y en entrenar a nuevos asustadores.
             </p>
-
-            <h2>Contacto</h2>
-            <ul>
-                <li>
-                    <img id="direccion" src="direccion.png" alt="Dirección" width="20" height="20">
-                    Calle Monstruosa 123, Monstropolis
-                </li>
-                <li>
-                    <img id="gmail" src="gmail.png" alt="Email" width="20" height="20">
-                    mikewazowski@monstersinc.com
-                </li>
-                <li>
-                    <img id="telefono" src="telefono.png" alt="Teléfono" width="20" height="20">
-                    +1 555-SCARES
-                </li>
-            </ul>
         </div>
 
         <!-- Columna Derecha -->
@@ -66,23 +43,7 @@
                 <li>Aprendizaje de técnicas de asustamiento.</li>
                 <li>Participación en simulacros de sustos.</li>
             </ul>
-
-            <h2>Educación</h2>
-            <h4>Licenciatura en Asustamiento - Universidad de Monstropolis</h4>
-            <p><em>1991 - 1995</em></p>
-            <ul>
-                <li>Especialización en técnicas avanzadas de susto.</li>
-                <li>Curso de seguridad en puertas dimensionales.</li>
-            </ul>
-
-            <h2>Habilidades</h2>
-            <ul>
-                <li>Técnicas avanzadas de asustamiento.</li>
-                <li>Trabajo en equipo y liderazgo.</li>
-                <li>Manejo de software de seguimiento de gritos.</li>
-            </ul>
         </div>
     </div>
-
 </body>
 </html>
