--- a/P1/index.html
+++ b/P1/index.html
@@ -15,33 +15,33 @@
         <div id="c1" class="columna izquierda">
             <h2>Sobre mí</h2>
             <div class="iresponsive">
-                <img src="mike1.jpg" alt="Mike Wazowski">
+                <img src="images/mike1.jpg" alt="Mike Wazowski">
             </div>
             <div class="iresponsive">
-                <img src="mike2.jpg" alt="Mike Wazowski">
+                <img src="images/mike2.png" alt="Mike Wazowski">
             </div>
             <p>
                 ¡Hola! Soy Mike Wazowski, asustador profesional en Monsters, Inc. 
                 Me especializo en generar gritos de alta calidad y en entrenar a nuevos asustadores.
             </p>
+            <a href="about.html">Más sobre mí</a>
         </div>
 
         <!-- Columna Derecha -->
         <div id="c2" class="columna derecha">
-            <h2>Experiencia Laboral</h2>
-            <h4>Asustador Senior - Monsters, Inc.</h4>
-            <p><em>2001 - Presente</em></p>
+            <h2>Formación</h2>
+            <h4>Licenciatura en Asustamiento - Universidad de Monstropolis</h4>
+            <p><em>1991 - 1995</em></p>
             <ul>
-                <li>Generación de gritos de nivel A+.</li>
-                <li>Colaboración con Sulley Sullivan para maximizar la producción de energía.</li>
-                <li>Entrenamiento de nuevos asustadores.</li>
+                <li>Especialización en técnicas avanzadas de susto.</li>
+                <li>Curso de seguridad en puertas dimensionales.</li>
             </ul>
 
-            <h4>Asustador Junior - Monsters, Inc.</h4>
-            <p><em>1995 - 2001</em></p>
+            <h2>Habilidades</h2>
             <ul>
-                <li>Aprendizaje de técnicas de asustamiento.</li>
-                <li>Participación en simulacros de sustos.</li>
+                <li>Técnicas avanzadas de asustamiento.</li>
+                <li>Trabajo en equipo y liderazgo.</li>
+                <li>Manejo de software de seguimiento de gritos.</li>
             </ul>
         </div>
     </div>
