--- a/P1/about.html
+++ b/P1/about.html
@@ -13,24 +13,26 @@
         <!-- Columna Izquierda -->
         <div id="c1" class="columna izquierda">
             <h2>Mi Trayectoria</h2>
-            <div class="iresponsive">
-                <img src="images/mike3.webp" alt="Mike Wazowski">
+            <img src="images/mike3.webp" alt="Mike Wazowski" class="about-image">
+            <div class="about-text">
+                <p>
+                    Desde pequeño, siempre quise ser un gran asustador. Estudié en la Universidad de Monstropolis, 
+                    donde me gradué con honores en Asustamiento. Trabajo en Monsters, Inc. junto a mi mejor amigo 
+                    Sulley Sullivan, y juntos hemos roto récords de generación de energía.
+                </p>
             </div>
-            <p>
-                Desde pequeño, siempre quise ser un gran asustador. Estudié en la Universidad de Monstropolis, 
-                donde me gradué con honores en Asustamiento. Trabajo en Monsters, Inc. junto a mi mejor amigo 
-                Sulley Sullivan, y juntos hemos roto récords de generación de energía.
-            </p>
         </div>
 
         <!-- Columna Derecha -->
         <div id="c2" class="columna derecha">
             <h2>Aficiones e Intereses</h2>
-            <ul>
-                <li>Entrenar a nuevos asustadores.</li>
-                <li>Participar en competencias de sustos.</li>
-                <li>Disfrutar del tiempo libre con Sulley y Boo.</li>
-            </ul>
+            <div class="about-text">
+                <ul>
+                    <li>Entrenar a nuevos asustadores.</li>
+                    <li>Participar en competencias de sustos.</li>
+                    <li>Disfrutar del tiempo libre con Sulley y Boo.</li>
+                </ul>
+            </div>
             <a href="index.html">Volver al CV</a>
         </div>
     </div>
