--- a/P1/index.html
+++ b/P1/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="cv.css">
 </head>
 <body>
+    <!-- Título y subtítulo -->
     <h1>MIKE WAZOWSKI</h1>
     <h3>Asustador Profesional</h3>
 
+    <!-- Resto del contenido -->
     <div class="fila">
         <!-- Columna Izquierda -->
         <div id="c1" class="columna izquierda">
@@ -18,7 +20,7 @@
                 <img src="images/mike1.jpg" alt="Mike Wazowski">
             </div>
             <div class="iresponsive">
-                <img src="images/mike2.png" alt="Mike Wazowski">
+                <img src="images/mike2.jpg" alt="Mike Wazowski">
             </div>
             <p>
                 ¡Hola! Soy Mike Wazowski, asustador profesional en Monsters, Inc. 
