--- a/P1/about.html
+++ b/P1/about.html
@@ -32,8 +32,26 @@
                     <li>Participar en competencias de sustos.</li>
                     <li>Disfrutar del tiempo libre con Sulley y Boo.</li>
                 </ul>
+            
+            <h3 class="video-text">
+                Mi vida fue tan interesante que me hicieron una película.
+            </h3>
+            <!-- Video de YouTube -->
+            <div class="video-container">
+                <iframe 
+                width="560" 
+                height="315" 
+                src="https://www.youtube.com/embed/UR_8-Inn-ig?si=m5DlMNm01kGs36RC" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+                </iframe>
             </div>
-            <a href="index.html">Volver al CV</a>
+            
+            </div>
+            <a href="index.html" class="about-link">Volver al CV</a>
         </div>
     </div>
 </body>
