--- a/P1/index.html
+++ b/P1/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Título y subtítulo -->
     <h1>MIKE WAZOWSKI</h1>
-    <h3>Asustador Profesional</h3>
+    <h3>CO-PRESIDENTE MONSTRUOS S.A.</h3>
 
     <!-- Resto del contenido -->
     <div class="fila">
@@ -23,20 +23,36 @@
                 <img src="images/mike2.jpg" alt="Mike Wazowski">
             </div>
             <p>
-                ¡Hola! Soy Mike Wazowski, asustador profesional en Monsters, Inc. 
+                ¡Hola! Soy Michael "Mike" Wazowski, soy co-presidente de Monstruos S.A. con mi amigo Sulley Sullivan.
                 Me especializo en generar gritos de alta calidad y en entrenar a nuevos asustadores.
             </p>
-            <a href="about.html">Más sobre mí</a>
+            <a href="about.html" class="about-link">Acerca De</a>
         </div>
 
         <!-- Columna Derecha -->
         <div id="c2" class="columna derecha">
-            <h2>Formación</h2>
+            <h2>Formación académica</h2>
             <h4>Licenciatura en Asustamiento - Universidad de Monstropolis</h4>
             <p><em>1991 - 1995</em></p>
             <ul>
                 <li>Especialización en técnicas avanzadas de susto.</li>
                 <li>Curso de seguridad en puertas dimensionales.</li>
+            </ul>
+
+            <h2>Trayectoria profesional</h2>
+            <h4>Asustador Junior en Monstruos S.A.</h4>
+            <p><em>1991 - 1995</em></p>
+            <ul>
+                <li>Aprendizaje de técnicas básicas y avanzadas de asustamiento.</li>
+                <li>Apoyo en la logística de puertas y manejo de niños.</li>
+            </ul>
+
+            <h4>Co-Presidente Monstruos S.A.</h4>
+            <p><em>2001 - Actualidad</em></p>
+            <ul>
+                <li>Generación de gritos de nivel A+ mediante técnicas innovadoras.</li>
+                <li>Colaboración estrecha con James P. Sullivan para maximizar la producción de energía.</li>
+                <li>Mantenimiento de un récord impecable de seguridad en la sala de sustos.</li>
             </ul>
 
             <h2>Habilidades</h2>
