--- a/P1/about.html
+++ b/P1/about.html
@@ -17,7 +17,7 @@
             <div class="about-text">
                 <p>
                     Desde pequeño, siempre quise ser un gran asustador. Estudié en la Universidad de Monstropolis, 
-                    donde me gradué con honores en Asustamiento. Trabajo en Monsters, Inc. junto a mi mejor amigo 
+                    donde me gradué con honores en Asustamiento. Trabajo en Monstruos S.A. junto a mi mejor amigo 
                     Sulley Sullivan, y juntos hemos roto récords de generación de energía.
                 </p>
             </div>
@@ -39,7 +39,7 @@
             <!-- Video de YouTube -->
             <div class="video-container">
                 <iframe 
-                width="560" 
+                width="100%" 
                 height="315" 
                 src="https://www.youtube.com/embed/UR_8-Inn-ig?si=m5DlMNm01kGs36RC" 
                 title="YouTube video player" 
