--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
             </p>
 
             <ul>
-                <li><a href="P1">Práctica 1: CV</a></li>
-                <li>Formación</li>
-                <li>Experiencia</li>
-                <li>Acerca de</li>
+                <li><a href="P2">Práctica 2: ¡BOOM!</a></li>
             </ul>
         </div>
 
@@ -45,7 +42,7 @@
             <img src="web-tech.png" alt="Tecnologías web">
             <p>Mel id clita mollis repudiare. Sed ad nostro delicatissimi.</p>
 
-            <h2>Práctica 2: Diseño Web</h2>
+            <h2>Práctica 2: ¡BOOM!</h2>
             <img src="web-tech.png" alt="Tecnologías web">
             <p>Postea pertinax est an. Adhuc sensibus percipitur sed te.</p>
 
