--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </p>
 
             <ul>
-                <li><a href="P2">Práctica 2: ¡BOOM!</a></li>
+                <li><a href="P3/">Práctica 3: Invasión Alienígena</a></li>
             </ul>
         </div>
 
