--- a/P3/index.html
+++ b/P3/index.html
@@ -13,7 +13,7 @@
     <!-- Sonidos -->
     <audio id="disparo" src="disparo.mp3" preload="auto"></audio>
     <audio id="explosion" src="explosion.mp3" preload="auto"></audio>
-    <audio id="oleada" src="fight.mp3" preload="auto"></audio>
+    <audio id="round" src="round.mp3" preload="auto"></audio>
     <audio id="victoria" src="victoria.mp3" preload="auto"></audio>
     <audio id="derrota" src="derrota.mp3" preload="auto"></audio>
 </body>
