--- a/P3/index.html
+++ b/P3/index.html
@@ -2,13 +2,22 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Invasión Alienígena</title>
     <link rel="stylesheet" href="invasion.css">
     <script src="juego.js" defer></script>
 </head>
 <body>
-    <canvas id="InvasionAlienigena"></canvas>
+    <div id="game-container">
+        <canvas id="InvasionAlienigena"></canvas>
+        
+        <!-- Controles móviles -->
+        <div id="mobile-controls">
+            <div id="left-btn" class="control-btn">←</div>
+            <div id="right-btn" class="control-btn">→</div>
+            <div id="shoot-btn" class="control-btn">DISPARAR</div>
+        </div>
+    </div>
     
     <!-- Sonidos -->
     <audio id="disparo" src="disparo.mp3" preload="auto"></audio>
