--- a/P3/index.html
+++ b/P3/index.html
@@ -8,7 +8,15 @@
     <script src="juego.js" defer></script>
 </head>
 <body>
+    <div id="tituloJuego">INVASIÓN ALIENÍGENA</div>
     <canvas id="InvasionAlienigena"></canvas>
+
+    <!-- Controles móviles -->
+    <div id="controlesMoviles">
+        <div id="btnIzquierda" class="control-btn">←</div>
+        <div id="btnDisparar" class="control-btn">•</div>
+        <div id="btnDerecha" class="control-btn">→</div>
+    </div>
     
     <!-- Sonidos -->
     <audio id="disparo" src="disparo.mp3" preload="auto"></audio>
