--- a/P3/index.html
+++ b/P3/index.html
@@ -8,7 +8,7 @@
     <script src="juego.js" defer></script>
 </head>
 <body>
-    <div id="tituloJuego">INVASIÓN ALIENÍGENA</div>
+    <div id="tituloJuego">STAR WARS: A NEW HOPE</div>
     <canvas id="InvasionAlienigena"></canvas>
 
     <!-- Controles móviles -->
