--- a/P4/index.html
+++ b/P4/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memory</title>
-  <link rel="stylesheet" href="memory.css" />
+  <link rel="stylesheet" href="memory.css">
   <script src="memory-game.js" defer></script>
 </head>
 <body>
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="grid-container">
-      <div class="tablero" grid-dimension="4"></div>
+      <div class="tablero" data-grid-dimension="4"></div>
       <div class="win">¡Has Ganado!</div>
     </div>
   </div>
