--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </p>
 
             <ul>
-                <li><a href="P4/">Práctica 4: Memoria</a></li>
+                <li><a href="P5/">Práctica 5: Simulando la red</a></li>
             </ul>
         </div>
 
